force-app/main/default/objects/A01_DaylySales__c/fields/CalculationStatus__c.field-meta.xml
<CustomField>
    <fullName>CalculationStatus__c</fullName>
    <label>集計フラグ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未集計</fullName>
                <default>true</default>
                <label>未集計</label>
            </value>
            <value>
                <fullName>集計済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>