force-app/main/default/objects/A01_DaylySales__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>原価</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>