force-app/main/default/objects/A01_DaylySales__c/fields/CostHydroelectric__c.field-meta.xml
<CustomField>
    <fullName>CostHydroelectric__c</fullName>
    <label>費用(水電)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>