force-app/main/default/objects/A01_DaylySales__c/fields/CostRental__c.field-meta.xml
<CustomField>
    <fullName>CostRental__c</fullName>
    <label>費用(賃貸)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>