force-app/main/default/objects/A01_DaylySales__c/fields/CostSalary__c.field-meta.xml
<CustomField>
    <fullName>CostSalary__c</fullName>
    <label>費用(給料)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>