force-app/main/default/objects/A01_DaylySales__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>年月日</label>
    <length>8</length>
    <type>Text</type>
</CustomField>