force-app/main/default/objects/A01_DaylySales__c/fields/Jikan__c.field-meta.xml
<CustomField>
    <fullName>Jikan__c</fullName>
    <label>時間項目（TMP）</label>
    <type>Time</type>
</CustomField>