force-app/main/default/objects/A01_DaylySales__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <label>利益</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>