force-app/main/default/objects/A01_DaylySales__c/fields/StoreNoDay__c.field-meta.xml
<CustomField>
    <fullName>StoreNoDay__c</fullName>
    <formula>StoreR__r.StoreNo__c &amp;  TEXT(Day__c)</formula>
    <label>店番年月日</label>
    <type>Text</type>
</CustomField>