force-app/main/default/objects/A01_DaylySales__c/fields/StoreR__c.field-meta.xml
<CustomField>
    <fullName>StoreR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売店情報</label>
    <referenceTo>A01_Store__c</referenceTo>
    <relationshipLabel>A01_日次売上</relationshipLabel>
    <relationshipName>A01</relationshipName>
    <type>Lookup</type>
</CustomField>